# Gaze-Analysis-System

./: .gitignore  Dockerfile  LICENSE  README.md  age.py  azure_config.ini  box_utils.py  config.py  constant.py  docker-build-run.txt  docker-build.sh  face.py  face_landmark.py  gaze.py  gender.py  jarvis-cmake-fix.patch  mean_lm.txt  message_manager.py  run.py  run_gaze_pipeline.py  run_gaze_sequential.py  send_message.py  setup.sh  std_lm.txt
ds/: Makefile  chinfmod.sh  ds_customgie_gaze_config.txt  ds_pgie_config.txt  ds_pgie_facedetect_config.txt  ds_pipeline.py  ds_sgie_age_config.txt  ds_sgie_faciallandmarks_config.txt  ds_sgie_gender_config.txt  faces_label.txt  gazenet_config.txt  gender_labels.txt  nvdsinfer_ageparser.cpp  nvdsinfer_genderparser.cpp  tracker_config.yml
ds/lib/: .gitignore  gazenet_config.txt
ds/lib/customparser/: Makefile  nvdsinfer_ageparser.cpp  nvdsinfer_genderparser.cpp
ds/lib/gazeinfer/: Makefile  call_probes_from_py.cpp
kibana/: README.md
kibana/config/: logstash.conf
model/: README.md
model/age/: age.onnx  age_megaasian.onnx_b8_fp16.engine
model/face/: facenet_cal.txt
model/faciallandmarks/: README.md  config.json  create_plugin.sh  fpenet_cal.txt  model.md
model/faciallandmarks/1/: model.hdf5.uff
model/faciallandmarks/pluginv2/: CMakeLists.txt  flnetPluginCreator.cpp  fp16.h  softargmaxv2.cu  softargmaxv2PluginV2Fl.hpp  softargmaxv2PluginV2Hand.hpp  softargmaxv2depth.cu  upsamplingNearest.cu  upsamplingNearestPluginV2.hpp  utils.h
model/gaze/: config.json
model/gender/: gender.onnx  gender_wiki.onnx_b8_fp16.engine
sources/gst-plugins/gst-dsexample/: gstdsexample.cpp  gstdsexample.h  gstdsexample_optimized.cpp  gstdsexample_optimized.h
sources/gst-plugins/gst-nvdsaudiotemplate/: gstnvdsaudiotemplate.cpp  gstnvdsaudiotemplate.h
sources/gst-plugins/gst-nvdsosd/: gstnvdsosd.c  gstnvdsosd.h
sources/gst-plugins/gst-nvdspreprocess/: gstnvdspreprocess.cpp  gstnvdspreprocess.h  (+3 more)
sources/includes/: gst-nvdssr.h  nvds_latency_meta.h  nvds_obj_encode.h  nvds_version.h  nvdsinfer_tlt.h  nvdsmeta_schema.h  nvdstracker.h  nvmsgbroker.h
utils/: box_utils.py  config.py  display.py  gaze.py  message_manager.py  pipeline.py  send_message.py  trtcuda.py  video.py
(+41 files in other folders)
